--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-1">Parallax Template</h1>
+        <h5 class="header center teal-text text-lighten-1">Expendedoras de bebidas y snacks</h5>
         <div class="row center">
-          <h5 class="header col s12 dark">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 dark">Para un mundo en cuarentena</h5>
         </div>
         <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Contacto</a>
@@ -89,7 +89,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Una empresa moderna con sastifaccion para todo tipo de Cliente</h5>
         </div>
       </div>
     </div>
@@ -166,13 +166,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Porque elegirnos:</h5>
-          <p class="grey-text text-lighten-4">Por ser una empresa diferente orientada a la satisfacción del cliente a lograr su fidelidad a través de una permanente búsqueda de la excelencia. Por la excepcional calidad de los productos empleados.
-            Por la moderna tecnologia de todos los equipos instalados fabricados por empresas lideres mundiales en el sector, NEW BIANCHI ZANUZZI, SAECO. Por el servicio que presta, por la respuesta inmediata a cualquier requerimiento. Por ser una empresa diferente orientada a la satisfacción del cliente a lograr su fidelidad a través de una permanente búsqueda de la excelencia. Por la excepcional calidad de los productos empleados
-            Por la moderna tecnologia de todos los equipos instalados fabricados por empresas lideres mundiales en el sector, NEW BIANCHI ZANUZZI, SAECO. Por el servicio que presta, por la respuesta inmediata a cualquier requerimiento
-            Por la responsabilidad que asume frente a sus clientes, cada equipo
-            instalado está respaldado por un seguro de responsabilidad civil por daños que se puedan
-            casionar a terceros Por la experiencia de sus integrantes, que con más de 20 años en el sector. uvalan una trayectoria ascendente que es distancia cada vez más de la competencia Por el verdadero costo del servicio, el analisis de la relación precio prestación, que en definitiva es lo que se debe analizar, nos posiciona holgadamente al frente del mercado,
+          <h5 class="white-text">Nosotros</h5>
+          <p class="grey-text text-lighten-4">
           </p>
 
 
