--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Nosotros</h5>
+          <p>En Club Vending operamos en el mercado argentino, brindando servicios de bebidas calientes, frias, snacks, golosinas y más a través de máquinas expendedoras. Así podrá contentar a sus empleados y visitantes con un servicio de valor agregado en su área de trabajo, sala de espera, sala de reuniones, comedor, sanatorios, etc.
+
+            Además nosotros nos encargaremos de la instalación, mantenimiento y asistencia técnica de los equipos, junto con la provisión y reposición de insumos en forma periódica y suficiente.</p>
           <p class="grey-text text-lighten-4">
           </p>
 
