--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal">
+      ScrollReveal({ reset: true });
+      </script>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Cafe Vending</title>
@@ -11,7 +16,8 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="white" role="navigation">
+  <div class="navbar-fixed">
+  <nav class="white-navbar" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Vending</a>
       <ul class="right hide-on-med-and-down">
@@ -24,7 +30,7 @@
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-
+  </div>
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
@@ -96,12 +102,12 @@
     <div class="parallax"><img src="cafe3.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
-  <div class="container">
+  <div class="container" id='por'>
     <div class="section">
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4 id='por'>Porque elegirnos</h4>
+          <h4>Porque elegirnos</h4>
           <p class="left-align light">Por ser una empresa diferente orientada a la satisfacción del cliente a lograr su fidelidad a través de una permanente búsqueda de la excelencia. Por la excepcional calidad de los productos empleados.
             Por la moderna tecnologia de todos los equipos instalados fabricados por empresas lideres mundiales en el sector.
             Por el servicio que presta, por la respuesta inmediata a cualquier requerimiento. Por ser una empresa diferente orientada a la satisfacción del cliente a lograr su fidelidad a través de una permanente búsqueda de la excelencia. Por la excepcional calidad de los productos empleados
@@ -187,8 +193,45 @@ Además nosotros nos encargaremos de la instalación, mantenimiento y asistencia
           </div>
         </div>
       </footer>
-
+</body>
   <!--  Scripts-->
+  
+
+<script>
+ window.sr = ScrollReveal();
+ sr.reveal('.white-navbar', {
+  duration: 3000,
+  origin: 'top'
+  });
+
+  sr.reveal('.parallax-container', {
+  duration: 3000,
+  distance: '300px'
+  });
+
+</script>
+<script>
+  ScrollReveal().reveal('#contacto',  { duration: 5000, origin: 'right' });
+  ScrollReveal().reveal('#por',  { duration: 3000 });
+  </script>
+
+
+  <!-- smoothscrolling -->
+  <!-- jquery -->
+  <script>
+  $('a[href*=\\#]').on('click', function(event){     
+    event.preventDefault();
+    $('html,body').animate({scrollTop:$(this.hash).offset().top}, 1500);
+  });</script>
+  
+  
+  
+    <!-- MDB -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- Custom scripts -->
+    <script type="text/javascript"></script>
+  </html>
+  
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
