--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   
   <!-- Inputs -->
   <div class="container" id="contacto">
-  <div class="row">Dejenos su consulta:
+  <div class="row"><b>Dejenos su consulta:</b>
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
@@ -187,11 +187,11 @@ Además nosotros nos encargaremos de la instalación, mantenimiento y asistencia
             
             <i class="fab fa-facebook-square fa-7x"></i>&nbsp;<i class="fab fa-instagram fa-7x"></i>&nbsp;<i class="fab fa-twitter-square fa-7x"></i>
         </div>
-        <div class="footer-copyright"></i>
+        <div class="footer-copyright">
           <div class="fluid">
-          © 2020 Copyright <a class="brown-text text-lighten-3" href="http://webly">Webly</a>
+          © 2020 Copyright <a class="brown-text text-lighten-3"  href="http://webly"><h6>Webly</h6></a>
           </div>
-        </div>
+        </div></div>
       </footer>
 </body>
   <!--  Scripts-->
