--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h5 class="header col s12 dark">Para un mundo en cuarentena</h5>
         </div>
         <div class="row center">
-          <a href="#contacto" id="download-button" class="btn-large waves-effect waves-light pink lighten-1">Contacto</a>
+          <a href="#contacto" id="download-button" role="button" class="btn btn-outline-light btn-lg m-2">Contacto</a>
         </div>
         <br><br>
 
