--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <!-- Inputs -->
   <div class="container" id="contacto">
   <div class="row"><b>Dejenos su consulta:</b>
-    <form class="col s12">
+    <form class="col s12" data-netlify="true">
       <div class="row">
         <div class="input-field col s6">
           <input  id="first_name" type="text" class="validate">
