--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
      
         
          <div class="input-field col s6">
-            <input id="textarea" type="email" class="validate">
+            <input id="textarea" type="textarea" class="validate">
             <label for="textarea">Consulta</label>
             <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
               <i class="material-icons right">send</i>
